protected endpoint update
