# utils/docs/swagger.json
@@ -169,6 +169,11 @@
         },
         "/tasks": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get a list of all tasks",
                 "consumes": [
                     "application/json"
@@ -217,6 +222,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Sample Payload: \u003cbr\u003e `{ `\u003cbr\u003e` \"title\": \"Fix Bugs\", `\u003cbr\u003e` \"description\": \"fix multiple bugs in dev\", `\u003cbr\u003e` \"startDate\": \"2024-12-05T00:00:00Z\", `\u003cbr\u003e` \"deadline\": \"2024-12-07T00:00:00Z\" `\u003cbr\u003e` }`",
                 "consumes": [
                     "application/json"
@@ -285,6 +295,27 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
                     "500": {
                         "description": "Failed to create task",
                         "schema": {
@@ -296,6 +327,11 @@
         },
         "/tasks/{uuid}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -334,6 +370,27 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
                     "404": {
                         "description": "Task not found",
                         "schema": {
@@ -364,6 +421,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -411,6 +473,27 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
                     "404": {
                         "description": "Task not found",
                         "schema": {
@@ -435,6 +518,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Sample Payload (only send the ones you want to update): \u003cbr\u003e `{ `\u003cbr\u003e` \"description\": \"fix lots of bugs\", `\u003cbr\u003e` \"completed\": true, `\u003cbr\u003e` \"startDate\": \"2024-12-05T00:00:00Z\", `\u003cbr\u003e` \"deadline\": \"2024-12-07T00:00:00Z\" `\u003cbr\u003e` }`",
                 "consumes": [
                     "application/json"
@@ -473,6 +561,27 @@
                     },
                     "400": {
                         "description": "Invalid input",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "allOf": [
                                 {
@@ -546,6 +655,9 @@
                 "title"
             ],
             "properties": {
+                "createdBy": {
+                    "type": "string"
+                },
                 "deadline": {
                     "type": "string"
                 },
@@ -611,6 +723,9 @@
                     "minLength": 5
                 },
                 "startDate": {
+                    "type": "string"
+                },
+                "updatedBy": {
                     "type": "string"
                 }
             }
@@ -680,6 +795,13 @@
                     "default": false
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
